--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<script src="./public/js/app.js"></script>
 </head>
 <body>
-	<img id="main" src="https://c1.staticflickr.com/5/4112/5170590074_714d36db83_b.jpg">
-	<button id="change">Get a Random GIF!</button>
+	<img id="pic" src="https://c1.staticflickr.com/5/4112/5170590074_714d36db83_b.jpg">
+	<button id="new">Get a new GIF!</button>
 	<button id="reset">Reset Picture!</button>
 
 </body>
