--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script src="./public/js/app.js"></script>
 </head>
 <body>
-	<img id="pic" src="https://c1.staticflickr.com/5/4112/5170590074_714d36db83_b.jpg">
+	<img id="pic" src=""> <!-- add a "src" value here! -->
 	<button id="new">Get a new GIF!</button>
 	<button id="reset">Reset Picture!</button>
 
